sample5/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: laravel-app-service
                port:
                  number: 8080
---
# Service-NodePort
kind: Service
apiVersion: v1
metadata:
  name: laravel-app-service
spec:
  type: NodePort
  ports:
    - name: 'http-port'
      port: 8080
      targetPort: 80 # Default port for image
      protocol: TCP
  selector:
    app: laravel-nginx-app
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-nginx-app
spec:
  revisionHistoryLimit: 3 # ロールバック可能な履歴数
  progressDeadlineSeconds: 3600 # Recreate/RollingUpdate処理のタイムアウト時間
  replicas: 3
  selector:
    matchLabels:
      app: laravel-nginx-app
  template:
    metadata:
      labels:
        app: laravel-nginx-app
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: nginx
          image: cms-laravel-nginx-k8s
          imagePullPolicy: Never
          volumeMounts:
            - name: shared-data
              mountPath: /share
          ports:
            - containerPort: 80
        - name: app
          image: cms-laravel-app-k8s
          imagePullPolicy: Never
          volumeMounts:
            - name: shared-data
              mountPath: /share
          ports:
            - containerPort: 9000
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -afR /app/. /share"]
